--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,6 @@
 #index:
 #    path: /
-#    controller: App\Controller\DefaultController::index
+#    controller: App\Controller\DefaultController::index4
+search_recipes:
+    path: /search_recipes
+    controller: App\Controller\RecettesController::searchRecipes
