--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,8 @@
         "php-flasher/flasher-toastr": "^1.15",
         "phpdocumentor/reflection-docblock": "^5.3",
        "phpdocumentor/reflection-docblock": "^5.3",
+        "guzzlehttp/guzzle": "^7.8",
+        "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.24",
         "scheb/2fa-google-authenticator": "^6.12",
         "sensio/framework-extra-bundle": "^6.2",
