--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "doctrine/doctrine-bundle": "^2.10",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.16",
-       "phpdocumentor/reflection-docblock": "^5.3",
+        "guzzlehttp/guzzle": "^7.8",
+        "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.24",
         "sensio/framework-extra-bundle": "^6.2",
         "symfony/asset": "5.4.*",
