--- a/.env
+++ b/.env
@@ -38,3 +38,5 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
+MAILER_DSN=smtp://votre_nom_utilisateur:votre_mot_de_passe@smtp.gmail.com:587
+
