--- a/composer.json
+++ b/composer.json
@@ -29,11 +29,13 @@
         "phpdocumentor/reflection-docblock": "^5.3",
        "phpdocumentor/reflection-docblock": "^5.3",
         "guzzlehttp/guzzle": "^7.8",
+        "knplabs/knp-snappy-bundle": "^1.10",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.24",
         "scheb/2fa-google-authenticator": "^6.12",
         "sensio/framework-extra-bundle": "^6.2",
         "stripe/stripe-php": "^14.2",
+        "simplethings/entity-audit-bundle": "^1.17",
         "symfony/asset": "5.4.*",
         "symfony/console": "5.4.*",
         "symfony/doctrine-messenger": "5.4.*",
