--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,17 @@
         "knplabs/knp-paginator-bundle": "^5.9",
         "knpuniversity/oauth2-client-bundle": "^2.18",
         "league/oauth2-google": "^4.0",
+        "guzzlehttp/guzzle": "^7.8",
+        "nyholm/psr7": "^1.8",
+        "openai-php/client": "^0.8.5",
+        "orhanerday/open-ai": "^5.1",
+        "php-flasher/flasher-symfony": "^1.15",
+        "php-flasher/flasher-toastr": "^1.15",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.24",
         "scheb/2fa-google-authenticator": "^6.12",
         "sensio/framework-extra-bundle": "^6.2",
+        "stripe/stripe-php": "^14.2",
         "symfony/asset": "5.4.*",
         "symfony/console": "5.4.*",
         "symfony/doctrine-messenger": "5.4.*",
@@ -43,8 +50,10 @@
         "symfony/string": "5.4.*",
         "symfony/translation": "5.4.*",
         "symfony/twig-bundle": "5.4.*",
+        "symfony/ux-autocomplete": "^2.12",
         "symfony/validator": "5.4.*",
         "symfony/web-link": "5.4.*",
+        "symfony/webpack-encore-bundle": "^2.1",
         "symfony/yaml": "5.4.*",
         "symfonycasts/reset-password-bundle": "*",
         "twig/extra-bundle": "^2.12|^3.0",
