--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,24 +1,31 @@
-# This file is the entry point to configure your own services.
-# Files in the packages/ subdirectory configure your dependencies.
+# The entry point to configure your own services.
 
-# Put parameters here that don't need to change on each machine where the app is deployed
-# https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    # Define any parameters your application needs here.
+    # Example:
+    # my_custom_parameter: 'value'
 
 services:
-    # default configuration for services in *this* file
+    # Default configuration for services in this file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+        public: false       # By default, services are private unless explicitly made public.
 
-    # makes classes in src/ available to be used as services
-    # this creates a service per class whose id is the fully-qualified class name
+    # Autowire classes in the App\ namespace as services
     App\:
-        resource: '../src/'
+        resource: '../src/'  # Load classes from the src/ directory
         exclude:
-            - '../src/DependencyInjection/'
-            - '../src/Entity/'
-            - '../src/Kernel.php'
+            - '../src/DependencyInjection/'  # Exclude dependency injection configuration
+            - '../src/Entity/'              # Exclude Doctrine entities
+            - '../src/Kernel.php'           # Exclude Kernel.php
+        public: true
 
-    # add more service definitions when explicit configuration is needed
-    # please note that last definitions always *replace* previous ones
+    # Define StripeService
+    
+
+    # Define other services and configurations as needed
+
+    # Define the ToastrFactory service
+    Flasher\Toastr\Prime\ToastrFactory:
+        public: true  # Allow this service to be autowired
