--- a/.env
+++ b/.env
@@ -38,5 +38,5 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
-MAILER_DSN=smtp://votre_nom_utilisateur:votre_mot_de_passe@smtp.gmail.com:587
+MAILER_DSN=smtp://eb359cdcce00e1:29023c6dd86f42@sandbox.smtp.mailtrap.io:2525
 
