--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,8 @@
         "php": ">=8.0",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "botman/botman": "^2.8",
+        "botman/driver-web": "^1.5",
         "doctrine/annotations": "^2.0",
         "doctrine/doctrine-bundle": "^2.10",
         "doctrine/doctrine-migrations-bundle": "^3.2",
