--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -6,9 +6,9 @@ parameters:
 
 twig:
     default_path: '%kernel.project_dir%/templates'
-
 when@test:
     twig:
         strict_variables: true
-        
-    
+
+parameters:
+    uploads_directory: '%kernel.project_dir%/public/frontend/assets/images'
