--- a/.env
+++ b/.env
@@ -32,11 +32,20 @@ DATABASE_URL="mysql://127.0.0.1:3306/yumlink"
 # Choose one of the transports below
 # MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
-MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+MESSENGER_TRANSPORT_DSN="doctrine://default"
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=null://null
+MAIL_USER="yumlink2@gmail.com"
+MAIL_PASS="ofxo nhyj uhiy gjut"
+MAIL_HOST="smtp.gmail.com"
+MAIL_PORT="587"
+MAILER_DSN=smtp://${MAIL_USER}:${MAIL_PASS}@${MAIL_HOST}:${MAIL_PORT}
 ###< symfony/mailer ###
-MAILER_DSN=smtp://eb359cdcce00e1:29023c6dd86f42@sandbox.smtp.mailtrap.io:2525
 
+###> karser/karser-recaptcha3-bundle ###
+# Get your API key and secret from https://g.co/recaptcha/v3
+RECAPTCHA3_KEY="6Lc-DcopAAAAAAHuUCuML8O8pAiVl-d2U4O6UKC1"
+RECAPTCHA3_SECRET="6Lc-DcopAAAAAL77PZz_YCVriFRoUx-XhuonXwdA"
+
+###< karser/karser-recaptcha3-bundle ###
