--- a/config/packages/mailer.yaml
+++ b/config/packages/mailer.yaml
@@ -1,3 +1,3 @@
 framework:
     mailer:
-        dsn: '%env(MAILER_DSN)%'
+        dsn: "smtp://yumlink2@gmail.com:jswxbztkbvynjgid@smtp.gmail.com:587"
