last bundel and metier

--- a/config/packages/notifier.yaml
+++ b/config/packages/notifier.yaml
@@ -1,6 +1,7 @@
 framework:
     notifier:
         texter_transports:
+            sendgrid: '%env(MAILER_DSN)%'
             win_toast: 'App\Notifier\Notification'
         channel_policy:
             # Specify the priority levels and the corresponding channels for each level
