--- a/config/packages/mailer.yaml
+++ b/config/packages/mailer.yaml
@@ -1,4 +1,3 @@
 framework:
     mailer:
-        dsn: 'smtp://yumlink12@gmail.com:your_app_password@smtp.gmail.com:587'
-
+        dsn: "smtp://yumlink2@gmail.com:jswxbztkbvynjgid@smtp.gmail.com:587"
