--- a/.env
+++ b/.env
@@ -38,3 +38,7 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
+# Twilio credentials
+TWILIO_ACCOUNT_SID=ACea997cd4e060d8ea6714cacac022e63b
+TWILIO_AUTH_TOKEN=a98be76928517aa9719d1f3b40a322ab
+TWILIO_PHONE_NUMBER=+12184322342
