--- a/config/services.yaml
+++ b/config/services.yaml
@@ -6,10 +6,19 @@
 parameters:
 
 services:
-    # default configuration for services in *this* file
+    # default configuration for services in this file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+             Twilio\Rest\Client: '@twilio.client'
+
+    App\Service\SmsSender:
+        arguments:
+            $sid: '%env(TWILIO_ACCOUNT_SID)%'
+            $token: '%env(TWILIO_AUTH_TOKEN)%'
+            $from: '%env(TWILIO_PHONE_NUMBER)%'
+
+            
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
