--- a/.env
+++ b/.env
@@ -75,3 +75,7 @@ WKHTMLTOIMAGE_PATH=/usr/local/bin/wkhtmltoimage
 GOOGLE_RECAPTCHA_SITE_KEY=
 GOOGLE_RECAPTCHA_SECRET=
 ###< google/recaptcha ###
+# Twilio credentials
+TWILIO_ACCOUNT_SID=ACea997cd4e060d8ea6714cacac022e63b
+TWILIO_AUTH_TOKEN=a98be76928517aa9719d1f3b40a322ab
+TWILIO_PHONE_NUMBER=+12184322342
