--- a/.env
+++ b/.env
@@ -49,3 +49,4 @@ RECAPTCHA3_KEY="6Lc-DcopAAAAAAHuUCuML8O8pAiVl-d2U4O6UKC1"
 RECAPTCHA3_SECRET="6Lc-DcopAAAAAL77PZz_YCVriFRoUx-XhuonXwdA"
 
 ###< karser/karser-recaptcha3-bundle ###
+ROUTER_REQUEST_CONTEXT_BASE_URL=http://127.0.0.1:8000
