--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "karser/karser-recaptcha3-bundle": "^0.1.26",
         "knpuniversity/oauth2-client-bundle": "^2.18",
         "league/oauth2-google": "^4.0",
+        "google/cloud-translate": "^1.17",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.24",
         "scheb/2fa-google-authenticator": "^6.12",
