--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "knpuniversity/oauth2-client-bundle": "^2.18",
         "league/oauth2-google": "^4.0",
         "google/cloud-translate": "^1.17",
+        "knplabs/knp-paginator-bundle": "^5.9",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.24",
         "scheb/2fa-google-authenticator": "^6.12",
