--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "league/oauth2-google": "^4.0",
         "dompdf/dompdf": "^2.0",
         "endroid/qr-code-bundle": "^5.0",
+        "google/cloud-vision": "^1.9",
         "guzzlehttp/guzzle": "^7.8",
         "knplabs/knp-snappy-bundle": "^1.10",
         "nyholm/psr7": "^1.8",
@@ -63,6 +64,7 @@
         "symfony/webpack-encore-bundle": "^2.1",
         "symfony/yaml": "5.4.*",
         "symfonycasts/reset-password-bundle": "*",
+        "thiagoalessio/tesseract_ocr": "^2.13",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0",
         "twilio/sdk": "^8.0"
