--- a/composer.json
+++ b/composer.json
@@ -11,16 +11,16 @@
         "doctrine/doctrine-bundle": "^2.10",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.16",
-        "google/cloud-translate": "^1.17",
-        "karser/karser-recaptcha3-bundle": "^0.1.26",
-        "knplabs/knp-paginator-bundle": "^5.9",
-        "knpuniversity/oauth2-client-bundle": "^2.18",
-        "league/oauth2-google": "^4.0",
         "dompdf/dompdf": "^2.0",
         "endroid/qr-code-bundle": "^5.0",
+        "google/cloud-translate": "^1.17",
         "google/cloud-vision": "^1.9",
         "guzzlehttp/guzzle": "^7.8",
+        "karser/karser-recaptcha3-bundle": "^0.1.26",
+        "knplabs/knp-paginator-bundle": "^5.9",
         "knplabs/knp-snappy-bundle": "^1.10",
+        "knpuniversity/oauth2-client-bundle": "^2.18",
+        "league/oauth2-google": "^4.0",
         "nyholm/psr7": "^1.8",
         "openai-php/client": "^0.8.5",
         "orhanerday/open-ai": "^5.1",
@@ -51,7 +51,7 @@
         "symfony/process": "5.4.*",
         "symfony/property-access": "5.4.*",
         "symfony/property-info": "5.4.*",
-        "symfony/runtime": "^6.4",
+        "symfony/runtime": "*",
         "symfony/security-bundle": "5.4.*",
         "symfony/sendgrid-mailer": "5.4.*",
         "symfony/serializer": "5.4.*",
