--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -26,3 +26,9 @@ filtrer_recettes:
     path: /filter
     controller: App\Controller\RecettesController::filterRecipes
     methods: ['GET']
+
+app_mesRecettes_show:
+    path: /mes_recettes
+    controller: App\Controller\RecettesController::MesRecettesChef
+    methods: ['GET']
+
