--- a/.env
+++ b/.env
@@ -30,8 +30,9 @@ MAILER_DSN="smtp://yumlink2@gmail.com:your_app_password@smtp.gmail.com:587"
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
-DATABASE_URL="mysql://127.0.0.1:3306/yumlink"
+#DATABASE_URL="mysql://yumlinkAdmin:123@172.20.10.8:3306/yumlink"
 ###< doctrine/doctrine-bundle ###
+DATABASE_URL="mysql://127.0.0.1:3306/yumlink"
 
 ###> symfony/messenger ###
 # Choose one of the transports below
@@ -79,3 +80,5 @@ GOOGLE_RECAPTCHA_SECRET=
 TWILIO_ACCOUNT_SID=ACea997cd4e060d8ea6714cacac022e63b
 TWILIO_AUTH_TOKEN=a98be76928517aa9719d1f3b40a322ab
 TWILIO_PHONE_NUMBER=+12184322342
+
+API_TRANSLATE_KEY_VALUE='AIzaSyA5kBZHY6EpCCyOJgtRPoXd90tJN7ks83Y'
